code/java/FactSetFunds/v3/docs/CostsFees.md


# CostsFees

Detailed fund costs and fees including management expenses, entry/exit fees, expense ratios, and investment minimums

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**fsymId** | **String** | FactSet Security Identifier. Six alpha-numeric characters, excluding vowels, with a -S suffix (XXXXXX-S), resolved from the &#x60;requestId&#x60; of the Fund requested. |  [optional]
**requestId** | **String** | The requested Id sent as input. |  [optional]
**date** | **LocalDate** | The date in YYYY-MM-DD format. |  [optional]
**currency** | **String** | ISO3 Currency. For a list of currency ISO codes, visit Online Assistant Page [OA1470](https://my.apps.factset.com/oa/pages/1470)&#39; |  [optional]
**error** | [**FundsErrorObject**](FundsErrorObject.md) |  |  [optional]
**managementFee** | **Double** | The management fee, or maintenance fee, is charged by the fund manager. This cost is usually between 0.5% and 2% of assets on average and is a periodic fee. |  [optional]
**entryFee** | **Double** | The transaction entry fee or purchase fee collected from investors when they join or leave a scheme. The fee is paid to the fund |  [optional]
**exitFee** | **Double** | The transaction exit fee is charged to investors when they redeem shares from a fund. |  [optional]
**maxFrontLoadFee** | **Double** | The Maximum sales load or initial Sales Fee is a reduction made from each investment in the fund, the maximum paid is dependent on the size of the purchase, it decreases as the investment increases. Often associated with class &#39;A&#39; shares of a mutual fund it is also known as Sales Charge, this is a fee paid when shares are purchased. Also known as a \&quot;front-end load\&quot;, this fee typically goes to the brokers that sell the fund&#39;s shares.  (Under the Investment Company Act of 1940 is 9%. The maximum sales load under NASD Rules is 81⁄2%).\&quot; |  [optional]
**max12B1Fee** | **Double** | The Back Expense Maximum |  [optional]
**backendLoad** | **Double** | Backend load is one of the fee and expense types reported for the specified share class, expressed as a percentage of assets under management.  |  [optional]
**expenseRatio** | **Double** | The Expense Ratio |  [optional]
**expenseRatioGross** | **Double** | The Gross Expense Ratio |  [optional]
**initialInvestmentMinimum** | **Double** | The Initial Investment Minimum |  [optional]
**initialInvestmentIRA** | **Double** | The Initial Investment Individual Retirement Accounts |  [optional]
**swingPrice** | **Double** | Swing Price. Swing pricing occurs when a fund provider adjusts the net asset value (NAV) of a fund in order to pass on trading costs to purchasing or redeeming shareholders. This anti-dilution technique is used to protect long-term shareholder&#39;s interests. |  [optional]
**swingPriceDate** | **LocalDate** | Swing Price Date. Swing pricing occurs when a fund provider adjusts the net asset value (NAV) of a fund in order to pass on trading costs to purchasing or redeeming shareholders. This anti-dilution technique is used to protect long-term shareholder&#39;s interests. |  [optional]
**performanceFee** | **Double** | Represents fees made to an investment manager as a percentage of investment profits for generating positive returns. |  [optional]
**tradingExpenseRatio** | **Double** | Represents the amount of trading commissions incurred to manage the portfolio as a percentage of the total assets of the fund. |  [optional]
**medianTrackingDifferencePercent** | **Double** | Returns median tracking difference. Median, upside, and downside are calculated by a rolling 12-month difference between NAV and index returns. This data item is available only with the Analytics product package. If the product is not enabled, the field will be omitted from the response. |  [optional]
**maxUpsideDeviationPercent** | **Double** | Returns Maximum Upside Deviation. Median, upside, and downside are calculated by a rolling 12-month difference between NAV and index returns. This data item is available only with the Analytics product package. If the product is not enabled, the field will be omitted from the response. |  [optional]
**maxDownSideDeviationPercent** | **Double** | Returns Maximum Down Side Deviation. Median, upside, and downside are calculated by a rolling 12-month difference between NAV and index returns. This data item is available only with the Analytics product package. If the product is not enabled, the field will be omitted from the response. |  [optional]
**fundClosureRisk** | **String** | Returns the fund closure risk. This data item is available only with the Analytics product package. If the product is not enabled, the field will be omitted from the response. |  [optional]
**etnCounterpartyRisk** | **String** | Returns the ETN CounterParty Risk. This data item is available only with the Analytics product package. If the product is not enabled, the field will be omitted from the response. |  [optional]


## Implemented Interfaces

* Serializable


